# src/main/java/com/ms/login/entrypoint/controllers/AuthController.java
@@ -2,6 +2,7 @@ package com.ms.login.entrypoint.controllers;
 
 import com.ms.login.application.usecase.CreateLoginUseCase;
 import com.ms.login.application.usecase.LoginUseCase;
+import com.ms.login.application.usecase.LogoutUseCase;
 import com.ms.login.application.usecase.RefreshTokenUseCase;
 import com.ms.login.domain.model.AuthTokenDomain;
 import com.ms.login.domain.model.LoginDomain;
@@ -12,28 +13,23 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-
-
 @RestController
 @RequestMapping("/v1")
 public class AuthController implements AutenticaoApi {
 
-    //TODO TOMORROW:
-    // [x] Testar as duas parte register e auth
-    // [x] Terminar e validar toda a parte de segurança do login
-    // [] Desenvolver o refresh e logout (foi so o refresh ate o momento) - Entender se realmente vou enviar so o refresh token ou objeto inteiro
-    // [] Fazer os teste e perfumarias
-
     private final LoginUseCase loginUseCase;
     private final CreateLoginUseCase createLoginUseCase;
     private final RefreshTokenUseCase refreshTokenUseCase;
+    private final LogoutUseCase logoutUseCase;
 
     public AuthController(LoginUseCase loginUseCase,
                           CreateLoginUseCase createLoginUseCase,
-                          RefreshTokenUseCase refreshTokenUseCase) {
+                          RefreshTokenUseCase refreshTokenUseCase,
+                          LogoutUseCase logoutUseCase) {
         this.loginUseCase = loginUseCase;
         this.createLoginUseCase = createLoginUseCase;
         this.refreshTokenUseCase = refreshTokenUseCase;
+        this.logoutUseCase = logoutUseCase;
     }
 
     @Override
@@ -51,16 +47,15 @@ public class AuthController implements AutenticaoApi {
     }
 
     @Override
-    public ResponseEntity<LoginResponseDto> _refreshToken(RefreshTokenRequestDto refreshTokenRequestDto) {
+    public ResponseEntity<RefreshResponseDto> _refreshToken(RefreshTokenRequestDto refreshTokenRequestDto) {
         AuthTokenDomain refreshToken = refreshTokenUseCase.refreshToken(refreshTokenRequestDto.getRefreshToken());
-        LoginResponseDto response = AuthPresenter.toLoginResponse(refreshToken);
+        RefreshResponseDto response = AuthPresenter.toRefreshResponse(refreshToken);
         return ResponseEntity.ok(response);
     }
 
     @Override
     public ResponseEntity<LogoutResponseDto> _logout(LogoutRequestDto logoutRequestDto) {
-        return null;
+        logoutUseCase.logoutLogin(logoutRequestDto.getToken());
+        return ResponseEntity.status(HttpStatus.OK).build();
     }
-
-
 }
